createing qurery for the models

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       </div>
     </header>
     <div class="container">
+      <button id="create-post">Create Post</button>
       <div class="posts"></div>
       <form
         id="create-post"
@@ -31,41 +32,20 @@
         <div>
           <label
             for="description"
-            class="
-              color:blue-265f8e
-              display:block
-              padding-bottom:8px
-              font-size:14px font-weight:500
-            "
+            class="color:blue-265f8e display:block padding-bottom:8px font-size:14px font-weight:500"
           >
             Photo Description
           </label>
           <input
             id="description"
             type="text"
-            class="
-              background-color:neutral-ffffff
-              border-color:neutral-4c5b5c
-              border-radius:0
-              border-style:solid
-              border-width:1px
-              color:neutral-483e40
-              min-height:form-input
-              padding:12px
-              width:100%
-              :hocus--border-color:neutral-000000
-            "
+            class="background-color:neutral-ffffff border-color:neutral-4c5b5c border-radius:0 border-style:solid border-width:1px color:neutral-483e40 min-height:form-input padding:12px width:100% :hocus--border-color:neutral-000000"
           />
         </div>
         <div>
           <label
             for="img"
-            class="
-              color:blue-265f8e
-              display:block
-              padding-bottom:8px
-              font-size:14px font-weight:500
-            "
+            class="color:blue-265f8e display:block padding-bottom:8px font-size:14px font-weight:500"
           >
             Photo Upload
           </label>
@@ -73,33 +53,13 @@
             type="file"
             id="img"
             accept=".jpg,.png"
-            class="
-              background-color:neutral-ffffff
-              border-color:neutral-4c5b5c
-              border-radius:0
-              border-style:solid
-              border-width:1px
-              color:neutral-483e40
-              min-height:form-input
-              padding:12px
-              width:100%
-              :hocus--border-color:neutral-000000
-            "
+            class="background-color:neutral-ffffff border-color:neutral-4c5b5c border-radius:0 border-style:solid border-width:1px color:neutral-483e40 min-height:form-input padding:12px width:100% :hocus--border-color:neutral-000000"
           />
         </div>
         <input
           type="submit"
           value="Create Post"
-          class="
-            display:inline-block
-            font-size:18px font-weight:700
-            line-height:1
-            padding-horizontal:24px padding-vertical:12px
-            background-color:orange-ff583d
-            color:neutral-222224
-            :hocus--background-color:yellow-f0c808
-            width:100%
-          "
+          class="display:inline-block font-size:18px font-weight:700 line-height:1 padding-horizontal:24px padding-vertical:12px background-color:orange-ff583d color:neutral-222224 :hocus--background-color:yellow-f0c808 width:100%"
         />
       </form>
     </div>
